--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ debugpy==1.6.6
 decorator==5.1.1
 executing==1.2.0
 Flask==2.2.2
+Flask-Cors==3.0.10
 fonttools==4.38.0
 ipykernel==6.21.2
 ipython==8.10.0
